Refactor JwtValidationFilter to enhance error handling and utilize GenericResponse for unauthorized access responses